# vectorlink-gpu

./: .gitignore  Cargo.toml  README.md  experiment.py  flake.nix  hello_world.py  main.py  pyproject.toml  shell.nix
nix/: uv-python.nix  uv-shell.nix
src/: main.rs  queue.rs
vectorlink/: ann.py  constants.py  datafusion.py  kernels.py  logging.py  primes.py  queue.py  utils.py
vectorlink_gpu/: ann.py  datafusion.py  log.py  queue.py  utils.py
